# bp1048_sdk_v0.1.12

./: .gitignore  readme.md  readme.txt  源码框架分析.md
BT_Audio_APP/: .cproject  .project  BT_Audio_APP_history.txt  nds32-ae210p.sag  script.bat  script_copy.ini
BT_Audio_APP/bt_audio_app_src/: main.c
BT_Audio_APP/bt_audio_app_src/ai/: ai.c  ai.h  ai_resample.c
BT_Audio_APP/bt_audio_app_src/ai/md5/: md5.c
BT_Audio_APP/bt_audio_app_src/apps/: browser_parallel.c  browser_tree.c  bt_hf_api.c  bt_hf_mode.c  bt_obex_upgrade.c  bt_play_api.c  bt_play_mode.c  bt_record_api.c  bt_record_mode.c  hdmi_in_api.c  hdmi_in_mode.c  i2sin_mode.c  linein_mode.c  main_task.c  media_play_api.c  media_play_mode.c  mode_switch_api.c  otg_device_audio.c  radio_mode.c  rest_mode.c  spdif_mode.c  usb_audio_mode.c  waiting_mode.c
BT_Audio_APP/bt_audio_app_src/audio/: audio_adjust.c  audio_adjust.h  audio_common.c  audio_common.h  audio_effect.c  audio_effect.h  audio_effect_process.c  audio_vol.c  communication.c  ctrlvars.c  ctrlvars.h  eq_params.c  eq_params.h
BT_Audio_APP/bt_audio_app_src/audio/effect_parameter/: AECBuf.c  DianYin.c  HanMai.c  HunXiang.c  MoYin.c  NanBianNv.c  NvBianNan.c  WaWaYin.c  YuanSheng.c
BT_Audio_APP/bt_audio_app_src/audio/music_parameter/: Music.c
BT_Audio_APP/bt_audio_app_src/ble/: ble_app_func.c  ble_app_func.h
BT_Audio_APP/bt_audio_app_src/ble/ble_adv_data_tool/: example.gatt  out.h
BT_Audio_APP/bt_audio_app_src/device/: QN8035.c  RDA5807.c  adc_key.c  adc_levels.c  breakpoint.c  code_key.c  deepsleep.c  device_detect.c  flash_boot.c  io_key.c  ir_key.c  ir_nec_key.c  key.c  power_key.c  power_monitor.c  rtc_ctrl.c  string_convert.c  upgrade.c
BT_Audio_APP/bt_audio_app_src/display/: display.c  seg_lcd_disp.c  seg_led_disp.c  seg_panel.c  sled_disp.c
BT_Audio_APP/bt_audio_app_src/inc/: adc_key.h  adc_levels.h  ai_service.h  app_config.h  app_message.h  audio_core_api.h  audio_decoder_in_use.h  audio_vol.h  breakpoint.h  browser_parallel.h  browser_tree.h  bt_config.h  bt_hf_api.h  bt_hf_mode.h  bt_name.h  bt_obex_upgrade.h  bt_play_api.h  bt_play_mode.h  bt_record_api.h  bt_record_mode.h  bt_stack_service.h  decoder_service.h  device_detect.h  device_service.h  flash_boot.h  flash_config.h  hdmi_in_api.h  key.h  main_task.h  media_play_api.h  mode_switch_api.h  power_key.h  recorder_service.h  remind_sound_service.h  rest_mode.h  rtc_ctrl.h  usb_audio_mode.h  waiting_mode.h
BT_Audio_APP/bt_audio_app_src/libopus/app/: CMakeLists.txt  aivs_encode.h  config_opus.h  mv_fifo_api.h
BT_Audio_APP/bt_audio_app_src/libopus/celt/: _kiss_fft_guts.h  arch_opus.h  bands.h  celt.h  celt_lpc.h  cwrs.h  ecintrin.h  float_cast.h  kiss_fft_opus.h  mathops.h  mdct.h  modes_opus.h  os_support_opus.h  pitch.h  quant_bands.h  rate.h  stack_alloc_opus.h  static_modes_fixed.h  static_modes_float.h  vq.h
BT_Audio_APP/bt_audio_app_src/libopus/include/: opus_custom.h  opus_defines.h  opus_types.h
BT_Audio_APP/bt_audio_app_src/libopus/silk/: macros.h
BT_Audio_APP/bt_audio_app_src/libopus/src/: mlp.h  opus_private.h
BT_Audio_APP/bt_audio_app_src/services/: ai_service.c  audio_core_api.c  audio_core_service.c  bt_stack_service.c  decoder_service.c  device_service.c  display_service.c  recorder_service.c  remind_sound_service.c
BT_Audio_APP/bt_audio_app_src/startup/: init-default.c
BT_Audio_APP/bt_audio_app_src/user/: hw_interface.h  misc.c  misc.h  soft_power.c  sys_gpio.h
BT_Audio_APP/bt_audio_app_src/xiaomi_ai/: aivs_ota.c  aivs_ota.h  aivs_rcsp.c  aivs_rcsp.h  xm_auth.h  xm_xiaoai_api.c  xm_xiaoai_api.h
MVsB1_Base_SDK/: MVsB1_Base_SDK_history.txt
MVsB1_Base_SDK/documents/: BP10系列SDK使用手册_v0.2.chm  BP10系列芯片使用手册_v0.2.chm  BP10系列芯片使用手册_v0.2.chw
MVsB1_Base_SDK/driver/driver/: Driver_history.txt
MVsB1_Base_SDK/driver/driver/inc/: audio_adc.h  backup.h  chip_info.h  clk.h  dac.h  dma.h  efuse.h  fft.h  gpio.h  i2c.h  otg_host_hcd.h  pwc.h  pwm.h  rtc.h  sdio.h  spdif.h  spi_flash.h  spim.h  timeout.h  uarts.h
MVsB1_Base_SDK/driver/driver_api/inc/: adc_interface.h  flash_interface.h  i2c_host.h  i2s_interface.h  sd_card.h  sw_uart.h  uarts_interface.h
MVsB1_Base_SDK/driver/driver_api/src/: adc_interface.c  sd_card.c  (+7 more)
MVsB1_Base_SDK/examples/Demo_AEC/: .cproject
MVsB1_Base_SDK/examples/Demo_BT/: .cproject  .project  nds32-ae210p.ld  readme .txt
MVsB1_Base_SDK/examples/Demo_BT_Hfp/: .cproject  .project  nds32-ae210p.sag  readme .txt
MVsB1_Base_SDK/examples/Demo_Decoder/: .cproject
MVsB1_Base_SDK/examples/Demo_Encoder/: .cproject  readme.txt
MVsB1_Base_SDK/examples/Demo_Encryption_A/: .cproject  .project  BP10芯片双密钥SDK工程配置说明.docx  nds32-ae210p.ld  nds32-ae210p.sag  readme.txt
MVsB1_Base_SDK/examples/Demo_Encryption_B/: .cproject  .project  export.txt  nds32-ae210p.ld  nds32-ae210p.sag  readme.txt
MVsB1_Base_SDK/examples/Demo_RGB/: .cproject  .project  readme.txt
MVsB1_Base_SDK/examples/Demo_RTC_Timer/: .cproject  .project  readme.txt
MVsB1_Base_SDK/examples/Demo_RemindSound/: .cproject  script.bat
MVsB1_Base_SDK/examples/Example_AudioADC/: readme.txt
MVsB1_Base_SDK/examples/Example_CacheDownSize/: readme.txt
MVsB1_Base_SDK/examples/Example_DMA/: readme.txt
MVsB1_Base_SDK/examples/Example_Flash/: readme.txt
MVsB1_Base_SDK/examples/Example_PowerConsumption/: Readme.txt
MVsB1_Base_SDK/examples/Example_RTC/: .cproject  .project  readme.txt
MVsB1_Base_SDK/examples/Example_Spectrum/: .cproject  .project  readme.txt
MVsB1_Base_SDK/examples/Example_USB/: .cproject  .project
MVsB1_Base_SDK/middleware/audio/: audio_decoder_error_code_summary.txt
MVsB1_Base_SDK/middleware/bluetooth/: BtStack_Std_history.txt  readme.txt
MVsB1_Base_SDK/middleware/cec/: cec_history.txt
MVsB1_Base_SDK/middleware/fatfs/: fatfs_history.txt
MVsB1_Base_SDK/middleware/rtc/: RTC_history.txt
MVsB1_Base_SDK/startup/: retarget.c
MVsB1_Base_SDK/tools/: readme.txt
MVsB1_Base_SDK/tools/libs_copy_script/: readme.txt
MVsB1_Base_SDK/tools/remind_script/: sound_remind_item.h
develop_lib/: develop_lib.h
develop_lib/trace/: trace.h
develop_lib/util/: util.h
(+214 files in other folders)
